# giganotes-mobile

./: README.md  build-angular.sh  build.gradle  settings.gradle
angular/: .angulardoc.json  README.md  angular.json  karma.conf.js  package-lock.json  package.json
angular/e2e/src/: app.e2e-spec.ts
angular/src/app/: app.module.ts
angular/src/app/home/: home-routing.module.ts
angular/src/app/home/notes-list-with-editor/: notes-list-with-editor.component.html  notes-list-with-editor.component.scss  notes-list-with-editor.component.ts
angular/src/app/model/: folder.js  folder.js.map  note.js  note.js.map
angular/src/app/model/server-responses-models/: auth-response.js  auth-response.js.map
angular/src/app/services/: auth-service.ts  interop.service.ts  logger-service.ts  note-manager-service.ts  storage.ts  sync-service.ts
angular/src/app/services/social-auth/: google-login-provider.ts  social-auth-service.ts
angular/src/environments/: environment.js  environment.js.map  environment.prod.ts  environment.ts
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/giganotes/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/giganotes/app/: Core.kt  MainActivity.kt  WebAppInterface.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/giganotes/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
